Adding some html and css
some html and css is added to assignment.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html&Css assignment</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello this is assignment</h1>
+    <div class="container">
+        <section class="header">
+            <header>
+                <p class="logo">e!</p>
+                <nav>
+                    <a href="#">Login</a>
+                    <button>Creat an account</button>
+                </nav>
+            </header>
+        </section>
+        <section class="second-section">
+            <h2 class="sec2-heading">Breakfast Places in Mumbai</h2>
+            <section class="sec2-filter"></section>
+            <section class="sec2-result">
+                <div class="card1">This is 1st card</div>
+                <div class="card2">this is second card</div>
+                <div class="page-link">
+                    <ul>
+                        <li><a href="#"></a><</li>
+                        <li><a href="#"></a>1</li>
+                        <li><a href="#"></a>2</li>
+                        <li><a href="#"></a>3</li>
+                        <li><a href="#"></a>4</li>
+                        <li><a href="#"></a>5</li>
+                        <li><a href="#"></a><</li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+    </div>
 </body>
 </html>
