--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <div class="container">
         <section class="header">
             <header>
-                <p class="logo">e!</p>
-                <nav>
-                    <a href="#">Login</a>
-                    <button>Creat an account</button>
-                </nav>
+                <a href="" style="text-decoration: none;"> <span class="logo"> e! </span> </a>
+                <span class="nav">
+                    <a class="nav-login" href="#">Login</a>                    <button class="nav-signup">Creat an account</button>
+                </span>
             </header>
         </section>
         <section class="second-section">
