value and name added to checkbox
and its works

done

--- a/filter-result/index2.html
+++ b/filter-result/index2.html
@@ -58,31 +58,37 @@
                     <div class="form-group row mt-3">
                         <label for="select-location" class="col-form-label">Cuisine</label>                        <div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <input class="form-check-input" type="checkbox"
+                                name="cuisine" id="cuisine"
+                                value="northindian">
                                 <label class="form-check-label" for="gridCheck1">
                                     North Indian
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <input class="form-check-input" type="checkbox"  name="cuisine" id="cuisine"
+                                value="southindian">
                                 <label class="form-check-label" for="gridCheck1">
                                     South Indian
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <input class="form-check-input" type="checkbox"  name="cuisine" id="cuisine"
+                                value="chinesefood">
                                 <label class="form-check-label" for="gridCheck1">
                                     Chinese Food
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <input class="form-check-input" type="checkbox"  name="cuisine" id="cuisine"
+                                value="fastfood">
                                 <label class="form-check-label" for="gridCheck1">
                                     Fast Food
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <input class="form-check-input" type="checkbox"  name="cuisine" id="cuisine"
+                                value="streetfood">
                                 <label class="form-check-label" for="gridCheck1">
                                     Street Food
                                 </label>
@@ -146,7 +152,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="pricesort" id="pricesort"
-                                        value="pricehightolow" checked>
+                                        value="pricehightolow" >
                                     <label class="form-check-label" for="pricesort">
                                         Price high to low
                                     </label>
