--- a/filter-result/index.html
+++ b/filter-result/index.html
@@ -2,19 +2,27 @@
 <html lang="en">
 
 <head>
+    <!--  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--  -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Food Services</title>
+    <!--  -->
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <!--  -->
 
-
+    <!--  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!--  -->
 
+    <!--  -->
     <link rel="stylesheet" href="style.css">
+    <!--  -->
+
 </head>
 
 <body>
@@ -32,11 +40,17 @@
 
     <!-- main container started -->
     <div class="container">
+        <!--  -->
         <h1 class="mt-4">Breakfast Places in Mumbai</h1>
+        <!--  -->
+
+        <!--  -->
         <div class="row main-row mt-4">
             <div class="col-md-3 filter-sort">
+                <!--  -->
                 <form>
                     <p class="h3">Filters</p>
+                    <!--  -->
                     <div class="form-group row">
                         <label for="select-location" class="col-form-label">Select Location</label>
                         <div>
@@ -169,95 +183,66 @@
                         </div>
                     </div>
                 </form>
+                <!--  -->
             </div>
-
+            <!--  -->
 
 
             <!-- results section -->
             <div class="col-md-9">
+                <!--  -->
                 <div class="row results">
-                    <div class="col-md-3">
-                        <img src="images/food1.png" alt="food image" height="100%" width="100%" />
-                    </div>
-                    <div class="col-md-9">
-                        <h1 class="">The Big Chill Cakery</h1>
-                        <h4 class="">Fort</h4>
-                        <p class="">
-                            Shop 1, Plot D, Samruddhi Complex, Chincholi …
-                        </p>
-                    </div>
 
-                    <hr>
-
-                    <div class="productFoot">
-                        <div class="featureLabels">
-                            <p>CUISINES:</p>
-                            <p>COST FOR TWO:</p>
-                        </div>
-                        <div class="features">
-                            <p>Bakery</p>
-                            <p>₹700</p>
-                        </div>
-                    </div>
                 </div>
+                <!--  -->
 
 
                 <!--  -->
                 <div class="row results">
-                    <div class="col-md-3">
-                        <img src="images/food1.png" alt="food image" height="100%" width="100%" />
-                    </div>
-                    <div class="col-md-9">
-                        <h1 class="">The Big Chill Cakery</h1>
-                        <h4 class="">Fort</h4>
-                        <p class="">
-                            Shop 1, Plot D, Samruddhi Complex, Chincholi …
-                        </p>
-                    </div>
 
-                    <hr>
-
-                    <div class="productFoot">
-                        <div class="featureLabels">
-                            <p>CUISINES:</p>
-                            <p>COST FOR TWO:</p>
-                        </div>
-                        <div class="features">
-                            <p>Bakery</p>
-                            <p>₹700</p>
-                        </div>
-                    </div>
                 </div>
-                
-                <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item" hidden><a class="page-link" href="#"></a></li>
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                      </li>
-                      <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item"><a class="page-link" href="#">4</a></li>
-                      <li class="page-item"><a class="page-link" href="#">5</a></li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                          <span class="sr-only">Next</span>
-                        </a>
-                      </li>
-                      <li class="page-item" hidden><a class="page-link" href="#">1</a></li>
-                    </ul>
-                  </nav>
-            </div>
-            <!-- main container Ended -->
+                <!--  -->
 
+                <!--  -->
+                <div class="row ">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination justify-content-center">
+                            <!--  -->
+                            <li class="page-item" hidden><a class="page-link" href="#"></a></li>
+                            <!--  -->
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">4</a></li>
+                            <li class="page-item"><a class="page-link" href="#">5</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                            <!--  -->
+                            <li class="page-item" hidden><a class="page-link" href="#">1</a></li>
+                            <!--  -->
+                        </ul>
+                    </nav>
+                </div>
+                <!--  -->
+            </div>
+            <!--  -->
+
+            <!-- main container Ended -->
+            <!--  -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
                 crossorigin="anonymous"></script>
+            <!--  -->
 </body>
 
 </html>
