--- a/filter-result/index.html
+++ b/filter-result/index.html
@@ -41,7 +41,7 @@
     <!-- main container started -->
     <div class="container">
         <!--  -->
-        <h1 class="mt-4">Breakfast Places in Mumbai</h1>
+        <h1 class="mt-4"><strong>Breakfast Places in Mumbai</strong></h1>
         <!--  -->
 
         <!--  -->
@@ -49,7 +49,7 @@
             <div class="col-md-3 filter-sort">
                 <!--  -->
                 <form>
-                    <p class="h3">Filters</p>
+                    <p class="h3"><strong>Filters</strong></p>
                     <!--  -->
                     <div class="form-group row">
                         <label for="select-location" class="col-form-label">Select Location</label>
@@ -158,7 +158,7 @@
 
                     <fieldset class="form-group mt-5">
                         <div class="row">
-                            <p class="h3">Sort</p>
+                            <p class="h3"><strong>Sort</strong></p>
                             <div class="">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="pricesort" id="pricesort"
@@ -191,20 +191,66 @@
             <!-- results section -->
             <div class="col-md-9">
                 <!--  -->
-                <div class="row results">
-
+                <div class="row p-3 results">
+                    <div class="row">
+                        <div class="col-3 p-3">
+                            <img class="img-fluid foodimg" src="/images/food1.png" alt="this is first food img">
+                        </div>
+                        <div class="col-9 p-3">
+                            <h1 class=""><strong>The Big Chill Cakery</strong></h1>
+                            <h4 class="">Fort</h4>
+                            <p class="">
+                              Shop 1, Plot D, Samruddhi Complex, Chincholi …
+                            </p>
+                        </div>
+                    </div>
+                    <hr width="80%">
+                    <div class="row">
+                        <div class="col-3 p-3">
+                            <p><strong>CUISINES:</strong></p>
+                            <p><strong>COST FOR TWO:</strong></p>
+                          </div>
+                          <div class="col-9 p-3">
+                            <p>Bakery</p>
+                            <p>₹700</p>
+                          </div>
+                    </div>
+                    
                 </div>
                 <!--  -->
 
 
                 <!--  -->
-                <div class="row results">
-
+                <div class="row p-3 results">
+                    <div class="row">
+                        <div class="col-3 p-3">
+                            <img class="img-fluid foodimg" src="/images/food1.png" alt="this is first food img">
+                        </div>
+                        <div class="col-9 p-3">
+                            <h1 class=""><strong>The Big Chill Cakery</strong></h1>
+                            <h4 class="">Fort</h4>
+                            <p class="">
+                              Shop 1, Plot D, Samruddhi Complex, Chincholi …
+                            </p>
+                        </div>
+                    </div>
+                    <hr width="80%">
+                    <div class="row">
+                        <div class="col-3 p-3">
+                            <p><strong>CUISINES:</strong></p>
+                            <p><strong>COST FOR TWO:</strong></p>
+                          </div>
+                          <div class="col-9 p-3">
+                            <p>Bakery</p>
+                            <p>₹700</p>
+                          </div>
+                    </div>
+                    
                 </div>
                 <!--  -->
 
                 <!--  -->
-                <div class="row ">
+                <div class="row mt-4">
                     <nav aria-label="Page navigation">
                         <ul class="pagination justify-content-center">
                             <!--  -->
