--- a/filter-result/index.html
+++ b/filter-result/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Food Services</title>
     <!--  -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <!--  -->
 
     <!--  -->
