--- a/filter-result/index.html
+++ b/filter-result/index.html
@@ -44,11 +44,19 @@
         <h1 class="mt-4"><strong>Breakfast Places in Mumbai</strong></h1>
         <!--  -->
 
+
+
         <!--  -->
         <div class="row main-row mt-4">
-            <div class="col-md-3 filter-sort">
+                    <!--  -->
+        <button onclick="toggleFilters()" class="filtersButton">
+            <p class="darkBlue">Filters / Sort</p>
+            <i id='filtersButtonArrow'  class="arrow arrowDown"></i>
+          </button>
+        <!--  -->
+            <div id="filters" class="filters col-md-3 filter-sort">
                 <!--  -->
-                <form>
+                <form >
                     <p class="h3"><strong>Filters</strong></p>
                     <!--  -->
                     <div class="form-group row">
@@ -200,7 +208,7 @@
                             <h1 class=""><strong>The Big Chill Cakery</strong></h1>
                             <h4 class="">Fort</h4>
                             <p class="">
-                              Shop 1, Plot D, Samruddhi Complex, Chincholi …
+                                Shop 1, Plot D, Samruddhi Complex, Chincholi …
                             </p>
                         </div>
                     </div>
@@ -209,13 +217,13 @@
                         <div class="col-3 p-3">
                             <p><strong>CUISINES:</strong></p>
                             <p><strong>COST FOR TWO:</strong></p>
-                          </div>
-                          <div class="col-9 p-3">
+                        </div>
+                        <div class="col-7 p-3 test">
                             <p>Bakery</p>
                             <p>₹700</p>
-                          </div>
+                        </div>
                     </div>
-                    
+
                 </div>
                 <!--  -->
 
@@ -230,7 +238,7 @@
                             <h1 class=""><strong>The Big Chill Cakery</strong></h1>
                             <h4 class="">Fort</h4>
                             <p class="">
-                              Shop 1, Plot D, Samruddhi Complex, Chincholi …
+                                Shop 1, Plot D, Samruddhi Complex, Chincholi …
                             </p>
                         </div>
                     </div>
@@ -239,13 +247,13 @@
                         <div class="col-3 p-3">
                             <p><strong>CUISINES:</strong></p>
                             <p><strong>COST FOR TWO:</strong></p>
-                          </div>
-                          <div class="col-9 p-3">
+                        </div>
+                        <div class="col-7 p-3 test">
                             <p>Bakery</p>
                             <p>₹700</p>
-                          </div>
+                        </div>
                     </div>
-                    
+
                 </div>
                 <!--  -->
 
@@ -288,6 +296,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
                 crossorigin="anonymous"></script>
+                <script src="script.js"></script>
             <!--  -->
 </body>
 
