--- a/search-home/index.html
+++ b/search-home/index.html
@@ -20,137 +20,105 @@
     <div id="header-img">
         <header>
             <div class="d-flex justify-content-center">
-                <div class="nav-menu">
-                    <p class="float-start text-white m-0 mt-3">Get the App</p>
-                    <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link">Sign up</p>
-                    <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link">Login</p>
+                <div class="nav-menu ">
+                    <button class="float-end m-0 mt-3 m-2 navigation-link-btn">Create an account</button>
+                    <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link-p">Login</p> 
+                    
                 </div>
+
             </div>
         </header>
         <div class="container">
-            <div class="d-flex justify-content-center header-flex">
-                <p class="zomato">Zomato</p>
+            <div class="justify-content-center header-flex">
+                <p class="logo">
+                    e!
+                </p><br>
+                <p class="logo-bottom">Find the best restaurants, caf&eacute;s, and bars </p>
             </div>
             <div class="d-flex justify-content-center mt-4">
-                <input type="text" class="search-box" placeholder="Search cuisines here...">
-                <button class="search-btn">Search</button>
+                <input type="text" class="search-box" placeholder="Please type a location">
+                <input type="text" class="search-box2" placeholder="Search for restaurants">
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
     <section id="second-section">
         <div class="container">
+            <div class="title m-2">
+                <h2>Quick Searches</h2>
+                <p>Discover restaurants by type of meal</p>
+            </div>
             <div class="row">
-                <div class="col-md-3">
-                    <div class="card">
-                        <img height="100%" width="100%"
-                            src="https://ik.imagekit.io/cnldanf31h/food2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669804812704"
-                            alt="img not available">
-                        <div class="card-bottom">
-                            <p class="h4 m-0 mt-2 text-center">Order Online</p>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img height="100%" width="100%"
-                            src="https://ik.imagekit.io/cnldanf31h/food3.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669804812701"
-                            alt="img not available">
-                        <div class="card-bottom">
-                            <p class="h4 m-0 mt-2 text-center">Order Online</p>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img height="100%" width="100%"
-                            src="https://ik.imagekit.io/cnldanf31h/food1.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669804812684"
-                            alt="img not available">
-                        <div class="card-bottom">
-                            <p class="h4 m-0 mt-2 text-center">Order Online</p>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img height="100%" width="100%"
-                            src="https://ik.imagekit.io/cnldanf31h/food4.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669804812529"
-                            alt="img not available">
-                        <div class="card-bottom">
-                            <p class="h4 m-0 mt-2 text-center">Order Online</p>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="popular-location">
-        <div class="container">
-            <div class="d-flex justify-content-center">
-                <p class="popular-heading">Popular Locations in and around <span class="font-weight-bold">Kolkata</span></p>
-            </div>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex align-item-center locations-div">
-                        <p class="m-0 ml-3 h5">Parkstreet Area</p>
-                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="get-zomato-app">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 d-none d-md-flex">
-                    <img class="ml-auto" height="100%" width="100%" src="https://b.zmtcdn.com/web/home/dining/2c17b1c302656ee6d434bff811442f8c1588271130.png" alt="img not available">
-                </div>
-                <div class="col-md-6">
-                    <p class="display-4 font-weight-bold mt-4">Get the Zomato App</p>
-                    <p>We will send you a link, open it on your phone to download the app</p>
-                    <div class="d-flex">
-                        <input type="text" placeholder="Email" class="email-input">
-                        <button class="btn btn-danger ml-2">Get App</button>
-                    </div>
-                    <p class="mt-3 text-muted">Download App From</p>
-                    <div class="d-flex">
-                        <img width="250px" height="60px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.tildacdn.com%2Ftild3435-3430-4133-a362-346661346266%2FGoogle-Play-and-Appl.png&f=1&nofb=1" alt="img not available">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 </body>
 <script src="/script.js"></script>
 
