--- a/search-home/index.html
+++ b/search-home/index.html
@@ -56,7 +56,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="row">
+                    <div class="row card">
+                        <div class="col-4"> <img height="100%" width="100%"
+                            src="/images/1.png"
+                            alt="img not available"></div>
+                        <div class="col-9"><h4 class="card-title">Breakfast</h4>
+                            <p class="card-para">Start your day with exclusive breakfast options</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="row card">
                         <div class="col-4"> <img height="100%" width="100%"
                             src="/images/1.png"
                             alt="img not available"></div>
@@ -66,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row">
+                    <div class="row card">
                         <div class="col-4"> <img height="100%" width="100%"
                             src="/images/1.png"
                             alt="img not available"></div>
@@ -76,7 +86,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row">
+                    <div class="row card">
                         <div class="col-4"> <img height="100%" width="100%"
                             src="/images/1.png"
                             alt="img not available"></div>
@@ -86,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row">
+                    <div class="row card">
                         <div class="col-4"> <img height="100%" width="100%"
                             src="/images/1.png"
                             alt="img not available"></div>
@@ -96,17 +106,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
-                            <p class="card-para">Start your day with exclusive breakfast options</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="row">
+                    <div class="row card">
                         <div class="col-4"> <img height="100%" width="100%"
                             src="/images/1.png"
                             alt="img not available"></div>
