--- a/search-home/index.html
+++ b/search-home/index.html
@@ -7,27 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato</title>
 
+    <!-- links of bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+        <!-- css file link -->
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
+    <!-- header started here -->
     <div id="header-img">
+        <!-- navigation links -->
         <header>
             <div class="d-flex justify-content-center">
                 <div class="nav-menu ">
                     <button class="float-end m-0 mt-3 m-2 navigation-link-btn">Create an account</button>
                     <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link-p">Login</p>
-
                 </div>
-
             </div>
         </header>
+        <!-- logo and search btns  -->
         <div class="container">
             <div class="justify-content-center header-flex">
                 <p class="logo">
@@ -37,24 +40,28 @@
             </div>
             <div class="d-flex justify-content-center mt-4">
                 <input type="text" class="search-box" placeholder="Please type a location">
-                <input type="text" class="search-box2" placeholder="Search for restaurants">
+                <div class="search-box2-div">
+
+                    <input type="text" class="search-box2" placeholder="Search for restaurants">
+                    <i class="fa fa-search"></i>
+                </div>
             </div>
         </div>
     </div>
 
-
-
-
-
-
+<!-- ************************************************************** -->
+<!-- second section started -->
 
     <section id="second-section">
         <div class="container">
+            <!-- title here -->
             <div class="title m-2">
                 <h2 class="second-section-title">Quick Searches</h2>
                 <p class="second-section-title-para">Discover restaurants by type of meal</p>
             </div>
+            <!-- all cards here -->
             <div class="row">
+                <!-- card 1 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6">
@@ -66,6 +73,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- card 2 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6"> <img height="100%" width="100%" src="/images/2.png" alt="img not available">
@@ -76,6 +85,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- card 3 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6"> <img height="100%" width="100%" src="/images/3.png" alt="img not available">
@@ -86,6 +97,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- card 4 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6"> <img height="100%" width="100%" src="/images/4.png" alt="img not available">
@@ -96,6 +109,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- card 5 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6"> <img height="100%" width="100%" src="/images/5.png" alt="img not available">
@@ -106,6 +121,8 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- card 6 -->
                 <div class="col-lg-4">
                     <div class="row custum-card">
                         <div class="col-6"> <img height="100%" width="100%" src="/images/6.png" alt="img not available">
@@ -116,6 +133,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- cards over here -->
             </div>
         </div>
     </section>
